--- a/mystyle.css
+++ b/mystyle.css
@@ -244,3 +244,9 @@ th, td {
   flex-wrap: wrap;
   width: 100%;
 }
+
+/*Mobile version*/
+ @media screen and (max-width:767px){
+  width:100%;
+  background-color: lightblue;
+ }
