--- a/mystyle.css
+++ b/mystyle.css
@@ -311,17 +311,19 @@ th, td {
 
 nav a 
 {
-  width:30%;
+  width:100%;
+  align-items: center;
 }
 
-nav ul {
+nav ul li {
   display: flex;
   flex-wrap: wrap;
-  width: 100%
+  width: 100%;
+  align-items: center;
 }
 
 .logo {
-  max-width: 50%;
+  max-width: 93%;
 }
 
 
